--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -7,8 +7,11 @@ environment:
   sdk: '>=3.0.3 <4.0.0'
 
 dependencies:
+  dio: ^5.4.1
   flutter:
     sdk: flutter
+  json_annotation: ^4.8.1
+  json_serializable: ^6.7.1
   stacked: ^3.4.0
   stacked_services: ^1.1.0
 
